--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,7 +41,7 @@ jobs:
         build-architecture: [ 'x86', 'x64' ]
     env:
       app-version: ${{ needs.release.outputs.app-version }}
-      app-package-name: 'AHM Report'
+      app-package-name: 'Agile Manager'
       path-publish: './publish'
       upload_url: ${{ needs.release.outputs.upload_url }}
     steps:
