--- a/MeControla.AgileManager.Core/MeControla.AgileManager.Core.csproj
+++ b/MeControla.AgileManager.Core/MeControla.AgileManager.Core.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\MeControla.AgileManager.Data\MeControla.AgileManager.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Integrations\Jira\V2\Fields\" />
+  </ItemGroup>
+
 </Project>
