--- a/MeControla.AgileManager/appsettings.Development.json
+++ b/MeControla.AgileManager/appsettings.Development.json
@@ -1,5 +1,37 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=storage.db"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext" ],
+    "WriteTo": [
+      { "Name": "Console" },
+      { "Name": "Debug" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "app.log",
+          "shared": true
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "AgileManagerService"
+    }
   }
 }
